/*
 * copy_command.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2021-2026 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package com.apple.foundationdb.relational.copy;
import "keyspace.proto";

option java_multiple_files = true;
option java_package = "com.apple.foundationdb.relational.copy";
option java_outer_classname = "CopyProto";

// Message used when exporting data via `COPY /my/path` and `COPY /my/path FROM ?`.
// Although this is currently just the raw `DataInKeySpacePath`, it will later need to contain information
// about the catalog, and potentially other information.
message CopyData {
  optional com.apple.foundationdb.record.provider.foundationdb.keyspace.DataInKeySpacePath data = 1;
  optional CatalogInfo schema_template = 2;
}

// Schema template information for a database/schema pair
message CatalogInfo {
  optional string template_name = 1;
  optional int32 template_version = 2;
  optional bytes template_metadata = 3;
}
